# betterconf

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
betterconf/: __init__.py  _config.py  _field.py  _specials.py  caster.py  config.py  decorator.py  exceptions.py  experimental.py  provider.py  providers.py
examples/: .env  README.md  casters.py  namespace.py  references.py  simple.py
tests/: test_config.py
